# es-challenge

./: README.md
es-service/: .env  Dockerfile  docker-compose.yml  requirements.txt
es-service/app/: main.py
es-service/app/api/dependencies/: authentication.py  database.py
es-service/app/api/routes/: api.py  authentication.py  leaderboard.py  quiz.py
es-service/app/core/: config.py  general.py  pagination_response.py  response.py
es-service/app/db/: db.py
es-service/app/db/repositories/: base_repo.py  leaderboard_repo.py  quiz_repo.py  user_repository.py
es-service/app/models/: common.py
es-service/app/models/domain/: leaderboard.py  quiz.py  quiz_user.py  user.py
es-service/app/models/schemas/: leaderboard.py  quiz.py  quiz_user.py  rschema.py  user.py
es-service/app/resources/: strings.py
es-service/app/services/: authentication.py  redis.py  token_utils.py
es-service/postgres/: postmaster.pid
es-service/postgres/global/: 1260  1262  2671  pg_control  pg_internal.init
es-service/postgres/pg_xact/: 0000
quiz_service/: Dockerfile  docker-compose.yml  pyproject.toml
quiz_service/app/: main.py
quiz_service/app/api/dependencies/: authentication.py  database.py
quiz_service/app/api/routes/: api.py  authentication.py  leaderboard.py  quiz.py  token.py
quiz_service/app/core/: config.py  error.py  events.py
quiz_service/app/db/: db.py
quiz_service/app/db/repositories/: leaderboard_repo.py  quiz_repo.py  user_repository.py
quiz_service/app/models/: common.py
quiz_service/app/models/domain/: leaderboard.py  quiz.py  user.py
quiz_service/app/models/schemas/: google_authen.py
quiz_service/app/services/: jwt.py
(+48 files in other folders)
