[tool.poetry]
name = "databucket-webapp-service"
version = "0.1.0"
description = ""
authors = ["Thai Le <holydragon2009@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.68.0"
uvicorn = "^0.15.0"
PyJWT = "^2.1.0"
motor = "^2.5.1"
python-dotenv = "^0.19.0"
pydantic = {extras = ["email"], version = "^1.8.2"}
passlib = "^1.7.4"
boto3 = "^1.18.25"
slackclient = "^2.9.3"
APScheduler = "^3.7.0"
facebook-sdk = "^3.1.0"
python-multipart = "^0.0.5"
python-facebook-api = "^0.10.0"
gunicorn = "^20.1.0"
uvloop = "^0.16.0"
httptools = "^0.3.0"
twilio = "^7.3.1"
elastic-apm = "^6.9.1"
cryptography = "^37.0.4"
fastapi_utils = "^0.2.1"
# mvp-backend
databases = "0.4.1"
Pillow = "8.1.2"
alembic = "1.5.7"
python-slugify = "4.0.1"
Unidecode = "1.2.0"
tomli = "1.2.1"
"fika-analytics-0.1.0" = "*"
urllib3 = "1.26.7"
celery = "5.2.2"
redis = "3.5.3"
flower = "1.0.0"
watchgod = "0.7"
asgiref = "3.4.1"
requests = "2.25.1"
requests-async = "0.6.2"
aioredis = "2.0.1"
aiofiles = "22.1.0"
google-api-python-client = "2.62.0"
bcrypt = "4.0.0"
firebase-admin = "5.3.0"
grpcio = "^1.50.0"
numpy = [
    {version = "<1.22", python = "<3.8"},
    {version = "^1.22", python = "^3.8"}
]
azure-core = "1.26.1"
azure-storage-blob = "12.14.1"
azure-identity = "^1.14.0"
loguru = "^0.5.1"
aiosql = "^3.1.2"
asyncpg = "^0.23.0"
sqlalchemy = "^1.4.49"
sqlmodel = "^0.0.11"

[tool.poetry.dev-dependencies]
black = "^21.7b0"
pytest = "^6.2.4"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"